css-recipes-and-layouts/fix: brends, wrap

--- a/css-recipes-and-layouts/css/styles.scss
+++ b/css-recipes-and-layouts/css/styles.scss
@@ -553,6 +553,7 @@ main {
     }
     .brends {
         align-items: center;
+        flex-wrap: wrap;
         img {
             flex: 0;
         }
